[project]
name = "dino-x-comfyui-node"
description = "A ComfyUI node that integrates DINO-X API for object detection and segmentation. This node allows you to detect and segment objects in images using text prompts."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["opencv-python>=4.8.0", "numpy>=1.24.0", "Pillow>=10.0.0", "supervision>=0.18.0", "dds-cloudapi-sdk>=0.3.3", "pytest>=7.4.0", "pytest-mock>=3.11.1"]

[project.urls]
Repository = "https://github.com/Style-Mosaic/dino-x-comfyui-node"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "dino-x-comfyui-node"
Icon = ""
